OTUxxxx-New feature HT JT

--- a/Languages/EN.CSV
+++ b/Languages/EN.CSV
@@ -1,9 +1,16 @@
-<<<<<<< HEAD
-﻿JMILAyajU,Hello World,0
-vLBYa80iv,Hoangs Page,0
-=======
-﻿/RqTzQ027,devmast page,0
+﻿IfIXHSejB,New feature v01,0
+JbjCivpP7,New Feature 01,0
 T+rJJCx+9,new feature 2,0
 TZRMLWXMm,new feature 1,0
+VhX+3FMkD,New Feature JT 01,0
 W/zkKEqgK,Devmaster Page,0
->>>>>>> devmaster
+cLltuDA0H,Here is JT feature 01,0
+d7nWUgT1m,New feature from Jayden v01,0
+jBgsaLsIC,Fix Hoang's page issue by Dev1 FEAT/HT_01,0
+pGwxs4dT/,Fix Hoang's page issue by Jayden FEAT/JT_01,0
+qJGZhQHt3,This is a new feature for v0.1,0
+ubmBzN0x7,This is a new feature from Dev 1  v0.1,0
+vLBYa80iv,Hoangs Page,0
+wvYV6Grkk,Fix Hoang's page issue FEAT/HT_01,0
+﻿/RqTzQ027,devmast page,0
+﻿JMILAyajU,Hello World,0
