--- a/Languages/EN.CSV
+++ b/Languages/EN.CSV
@@ -1,5 +1,7 @@
-﻿IfIXHSejB,New feature v01,0
+﻿DWZspop2k,TestBranch,0
+IfIXHSejB,New feature v01,0
 JbjCivpP7,New Feature 01,0
+SDaKst24b,Feature HT02,0
 T+rJJCx+9,new feature 2,0
 TZRMLWXMm,new feature 1,0
 VhX+3FMkD,New Feature JT 01,0
