--- a/Languages/EN.CSV
+++ b/Languages/EN.CSV
@@ -6,6 +6,8 @@ T+rJJCx+9,new feature 2,0
 TZRMLWXMm,new feature 1,0
 VhX+3FMkD,New Feature JT 01,0
 W/zkKEqgK,Devmaster Page,0
+Z6diCBoxX,WELCOME TO SCADA,0
+ZdOpNTHUS,Hoang Test Changeset,0
 cLltuDA0H,Here is JT feature 01,0
 d7nWUgT1m,New feature from Jayden v01,0
 jBgsaLsIC,Fix Hoang's page issue by Dev1 FEAT/HT_01,0
