--- a/Languages/EN.CSV
+++ b/Languages/EN.CSV
@@ -1,12 +1,11 @@
-﻿DWZspop2k,TestBranch,0
+﻿CcqZ1xMX+,My page to be deployed,0
 IfIXHSejB,New feature v01,0
 JbjCivpP7,New Feature 01,0
-SDaKst24b,Feature HT02,0
+MWB074JR/,Hoang Changeset,0
 T+rJJCx+9,new feature 2,0
 TZRMLWXMm,new feature 1,0
 VhX+3FMkD,New Feature JT 01,0
 W/zkKEqgK,Devmaster Page,0
-Z6diCBoxX,WELCOME TO SCADA,0
 ZdOpNTHUS,Hoang Test Changeset,0
 cLltuDA0H,Here is JT feature 01,0
 d7nWUgT1m,New feature from Jayden v01,0
